# FinanceFlow

./: .env.example  .gitignore  .gitlab-ci.yml  .gitmessage  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  app.py  financeflow.db  pyproject.toml  requirements.txt
.githooks/: pre-push
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
analytics/: ai_insights.py  charts.py  insights.py  metrics.py  translator.py
config/: categories.py  settings.py  styling.py  translations.py
database/: auth.py  connection.py  crud.py  models.py
finance-flow/: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  app.py  financeflow.db  pyproject.toml  requirements.txt
finance-flow/.github/workflows/: ci.yml
finance-flow/analytics/: ai_insights.py  charts.py  insights.py  translator.py
finance-flow/config/: settings.py  styling.py  translations.py
finance-flow/database/: auth.py  connection.py  crud.py  models.py  reviews.py
finance-flow/pages/: analytics.py  budgets.py  csv_tools.py  dashboard.py  insights.py  transactions.py
finance-flow/tests/: conftest.py  test_analytics.py  test_csv_import.py  test_database.py  test_performance.py
finance-flow/utils/: empty_states.py  helpers.py  validators.py
pages/: analytics.py  csv_tools.py  dashboard.py  insights.py  reviews.py  transactions.py
tests/: conftest.py  test_analytics.py  test_transactions.py
utils/: empty_states.py  helpers.py  validators.py
(+18 files in other folders)
