[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "finance-flow"
version = "0.1.0"
description = "Personal finance tracker built with Streamlit"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28",
    "pandas>=2.0",
    "plotly>=5.18",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
